<resources>
    <string name="loading_please_wait">Please wait…</string>
    <string name="error_occurred">Error occurred!</string>
    <string name="ok">OK</string>
    <string name="lorem_ipsum">At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum</string>
    <string name="hi_there">Hi There!</string>
    <string name="welcome_to_the_app">Welcome to Fix It</string>
    <string name="sign_in">Sign In</string>
    <string name="mobile_number_hint">Mobile Number</string>
    <string name="login_label">We will send you a One Time Password to verify your mobile number</string>
    <string name="continue_label">Continue</string>
    <string name="edit_number"><u>Edit Number</u></string>
    <string name="resend_otp"><u>Resend OTP</u></string>
    <string name="code_here">CODE HERE</string>
    <string name="no_internet">Check your internet connection once…</string>
    <string name="empty_mobile_number">Please enter your mobile number</string>
    <string name="incorrect_mobile_number">Check your mobile number once</string>
    <string name="too_many_verify_attempts">We received too many requests from your account. Please try again after some time.</string>
    <string name="code_sent">Verification code has been sent.</string>
    <string name="verification_header">OTP Verification</string>
    <string name="proceed">Proceed</string>
    <string name="verification_failed">Failed to verify the mobile number.</string>
    <string name="verification_success">Mobile number verified successfully</string>
    <string name="empty_otp">OTP cannot be empty…</string>
    <string name="server_contact_failed">Failed to communicate with the server. Please try again.</string>
    <string name="failed_to_find_user">Unable to find user data</string>
    <string name="data_fetching_failed">Failed to retrieve data</string>
    <string name="incorrect_code">Incorrect verification code</string>
    <string name="sign_in_failed">Failed to sign in</string>
    <string name="registration">Registration</string>
    <string name="name">Name</string>
    <string name="email">Email Address</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="details_missing">Please enter all the details</string>
    <string name="invalid_email">Invalid Email Address!!</string>
    <string name="registration_failed">Failed to register user</string>
    <string name="registered">Registered!!!</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_services">Services</string>
    <string name="menu_logout">Logout</string>
    <string name="about_us">About us</string>
    <string name="menu_users">Users</string>
    <string name="add_service">+ New Service</string>
    <string name="enter_service_name">Please enter the name of the service that you would like to add.</string>
    <string name="success_msg">Success</string>
    <string name="update_service">Update Service</string>
    <string name="add_user">+ New User</string>
    <string name="post_job">+ Post Job</string>
    <string name="role">Role</string>
    <string name="update_user">Update User</string>
    <string name="menu_jobs">Jobs</string>
    <string name="total_users">Total Users</string>
    <string name="total_technicians">Total Technicians</string>
    <string name="total_jobs">Total Jobs</string>
    <string name="total_revenue">Total Revenue</string>
    <string name="price_per_hr">Price per Hour</string>
    <string name="jobs_done">Jobs Done: %1$d</string>
    <string name="template_price">$%1$d/Hr</string>
    <string name="select">Select</string>
    <string name="no_records_found">No record(s) found!</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="selected_technician">Selected Technician</string>
    <string name="images">Images</string>
    <string name="menu_profile">Profile</string>
    <string name="profile_update_failed">Failed to update profile</string>
    <string name="updated">Updated</string>
    <string name="lbl_set_product_photo">Set Product Image</string>
    <string name="lbl_take_camera_picture">Take a picture</string>
    <string name="lbl_choose_from_gallery">Choose from gallery</string>
    <string name="image_detection_failed">Failed to parse the image</string>
    <string name="cannot_edit_mobile">Mobile number cannot be edited!</string>
    <string name="remove_image_confirmation">Are you sure you want to remove this image?</string>
    <string name="confirmation">Confirmation</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="image_upload_failed">Failed to upload image</string>
    <string name="job_saving_failed">Failed to save the job!</string>
    <string name="job_saved">Job posted!</string>
    <string name="pending">Pending</string>
    <string name="jobs_fetching_failed">Failed to fetch jobs!</string>
    <string name="job_details">Job Details</string>
    <string name="technician">Technician</string>
    <string name="edit"><u>Edit</u></string>
    <string name="images_label">Image(s):</string>
    <string name="empty_images">Please provide atleast one image.</string>
    <string name="post_job_confirmation">Please double check the provided information. Info cannot be edited once the job gets posted!.</string>
    <string name="go_back">Go Back</string>
    <string name="user">User</string>
    <string name="accept">Accept</string>
    <string name="reject">Reject</string>
    <string name="job_update_failed">Failed to update the job!</string>
    <string name="job_updated">Job updated!</string>
    <string name="total_cost">Total Cost</string>
    <string name="job_date">Job Date</string>
    <string name="save">Save</string>
    <string name="current_status">Current Status</string>
    <string name="completed_jobs">Completed Jobs</string>
    <string name="contact_us">Contact Us</string>
    <string name="contact_us_msg">Hi there, feel free to contact us about anything regarding our application. We are always eager and more than happy to assist you.</string>
    <string name="contact_details"><u>Contact Details</u></string>
    <string name="address_value">xx-xxx-xx,\nxxxxx xxxxx,\nxxxxxxx - xxxxxx</string>
    <string name="email_value">xxxxx@gmail.com</string>
    <string name="mobile_value">+1–1234567890</string>
    <string name="feedbacks">Feedbacks</string>
</resources>