<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_services"
            android:icon="@drawable/ic_baseline_miscellaneous_services_24"
            android:title="@string/menu_services" />

        <item
            android:id="@+id/nav_users"
            android:icon="@drawable/users"
            android:title="@string/menu_users" />

        <item
            android:id="@+id/nav_feedbacks"
            android:icon="@drawable/ic_baseline_feedback_24"
            android:title="@string/feedbacks" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_profile" />

    </group>

</menu>