<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.android.fixit.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_services"
        android:name="com.android.fixit.fragments.ServicesFragment"
        android:label="@string/menu_services"
        tools:layout="@layout/fragment_services" />

    <fragment
        android:id="@+id/nav_users"
        android:name="com.android.fixit.fragments.UsersFragment"
        android:label="@string/menu_users"
        tools:layout="@layout/fragment_users" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.android.fixit.fragments.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_feedbacks"
        android:label="@string/feedbacks"
        android:name="com.android.fixit.fragments.FeedbacksFragment"
        tools:layout="@layout/fragment_feedbacks"/>
    
</navigation>