<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_user_home"
            android:icon="@drawable/ic_baseline_home_24"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_user_jobs"
            android:icon="@drawable/ic_baseline_work_history_24"
            android:title="@string/menu_jobs" />

        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_baseline_account_circle_24"
            android:title="@string/menu_profile" />

        <item
            android:id="@+id/nav_feedback"
            android:icon="@drawable/ic_baseline_contact_support_24"
            android:title="@string/contact_us" />

    </group>

</menu>