<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/user_navigation"
    app:startDestination="@+id/nav_user_home">

    <fragment
        android:id="@+id/nav_user_home"
        android:name="com.android.fixit.fragments.UserHomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_user_home" />

    <fragment
        android:id="@+id/nav_user_jobs"
        android:name="com.android.fixit.fragments.JobsHistory"
        android:label="@string/menu_jobs"
        tools:layout="@layout/fragment_jobs_history" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.android.fixit.fragments.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_feedback"
        android:name="com.android.fixit.fragments.FeedbackFragment"
        android:label="@string/contact_us"
        tools:layout="@layout/frag_feedback"/>

</navigation>