<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/worker_navigation"
    app:startDestination="@+id/nav_worker_home">

    <fragment
        android:id="@+id/nav_worker_home"
        android:name="com.android.fixit.fragments.WorkerHomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_worker_home" />

    <fragment
        android:id="@+id/nav_worker_jobs"
        android:name="com.android.fixit.fragments.JobsHistory"
        android:label="@string/menu_jobs"
        tools:layout="@layout/fragment_jobs_history" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.android.fixit.fragments.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>