<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="30dp">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_back_24"
            app:layout_constraintBottom_toBottomOf="@id/label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/label"
            app:tint="@color/violet" />

        <TextView
            android:id="@+id/label"
            style="@style/poppins_bold_24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:text="@string/post_job"
            android:textColor="@color/violet"
            app:layout_constraintStart_toEndOf="@id/back"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/title"
            style="@style/poppins_medium_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/title"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/back" />

        <EditText
            android:id="@+id/title_et"
            style="@style/single_line_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/description"
            style="@style/poppins_medium_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/description"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_et" />

        <EditText
            android:id="@+id/description_et"
            style="@style/multi_line_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description" />

        <TextView
            android:id="@+id/technician"
            style="@style/poppins_medium_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/selected_technician"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/description_et" />

        <EditText
            android:id="@+id/technician_et"
            style="@style/single_line_et"
            android:enabled="false"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/technician" />

        <TextView
            android:id="@+id/price_per_hr"
            style="@style/poppins_medium_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/price_per_hr"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/technician_et" />

        <EditText
            android:id="@+id/price_et"
            style="@style/single_line_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:enabled="false"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_per_hr" />

        <TextView
            android:id="@+id/address"
            style="@style/poppins_medium_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/address"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/price_et" />

        <EditText
            android:id="@+id/address_et"
            style="@style/multi_line_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="3"
            android:inputType="textMultiLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address" />

        <TextView
            android:id="@+id/images"
            style="@style/poppins_medium_14"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/images"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/address_et" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/images_list"
            app:layout_constraintTop_toBottomOf="@id/images"/>

        <Button
            android:id="@+id/continue_btn"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:padding="8dp"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/images_list" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>