<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="30dp"
    android:weightSum="1">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/app_logo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".2">

        <TextView
            android:id="@+id/label1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hi_there"
            android:textColor="@color/violet"
            style="@style/poppins_bold_24"
            app:layout_constraintBottom_toTopOf="@id/label2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/label2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_the_app"
            android:textColor="@color/black"
            style="@style/poppins_regular_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/label1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight=".4">

        <TextView
            android:id="@+id/header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textColor="@color/violet"
            style="@style/poppins_bold_18"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/number_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintTop_toBottomOf="@id/header">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/input_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_grey_hollow_rect"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/country_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    app:ccp_defaultNameCode="CA"
                    app:ccp_showNameCode="false"
                    app:ccp_showPhoneCode="false"
                    app:ccp_textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/view"
                    android:layout_width="1dp"
                    android:layout_height="0dp"
                    android:background="@color/black"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/country_code"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/mobile_number"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@null"
                    android:hint="@string/mobile_number_hint"
                    android:inputType="number"
                    android:maxLength="15"
                    android:textColor="@color/black"
                    style="@style/poppins_regular_16"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/view"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/login_msg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/login_label"
                android:textColor="@color/black"
                style="@style/poppins_regular_14"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/input_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/verification_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/continue_btn"
            app:layout_constraintTop_toBottomOf="@id/number_layout">

            <EditText
                android:id="@+id/otp_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_grey_hollow_rect"
                android:gravity="center_horizontal"
                android:hint="@string/code_here"
                android:inputType="number"
                android:letterSpacing="1"
                android:maxLength="6"
                android:textColor="@color/black"
                android:padding="10dp"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/resend_otp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/resend_otp"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/otp_et" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:textSize="14sp"
                app:layout_constraintStart_toEndOf="@id/resend_otp"
                app:layout_constraintTop_toTopOf="@id/resend_otp" />

            <TextView
                android:id="@+id/edit_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_number"
                android:textColor="@color/black"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/resend_otp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <Button
            android:id="@+id/continue_btn"
            style="@style/button_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:text="@string/continue_label"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/verification_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</LinearLayout>